--- a/index.html
+++ b/index.html
@@ -4,32 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Krishved Singh Dugtal — Portfolio</title>
-    <style>
-        *{box-sizing:border-box;margin:0;padding:0}
-        body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:linear-gradient(135deg,#007BFF 0%,#00B4D8 100%);color:#333;padding:24px;}
-        .container{max-width:1200px;margin:0 auto}
-        header{background:rgba(255,255,255,0.95);padding:28px;border-radius:20px;box-shadow:0 8px 30px rgba(0,0,0,0.1);text-align:center;margin-bottom:30px}
-        header h1{color:#007BFF;font-size:2.5em;margin-bottom:10px}
-        header .sub{color:#666;font-size:1.2em}
-        .meta{margin-top:12px;font-weight:700}
-        nav{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-bottom:30px;background:rgba(255,255,255,0.9);padding:15px;border-radius:15px;box-shadow:0 4px 16px rgba(0,0,0,0.1)}
-        nav a{background:linear-gradient(135deg,#007BFF 0%,#00B4D8 100%);color:#fff;padding:12px 25px;border-radius:25px;text-decoration:none;transition:all .3s ease}
-        nav a:hover{transform:translateY(-2px);box-shadow:0 5px 15px rgba(0,123,255,0.4)}
-        section.card{display:none;background:rgba(255,255,255,0.95);padding:30px;border-radius:20px;box-shadow:0 8px 32px rgba(0,0,0,0.1);margin-bottom:30px}
-        section.active{display:block;animation:fadeIn 0.5s ease-in-out}
-        @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
-        h2{color:#007BFF;margin-bottom:20px;font-size:2em;border-bottom:3px solid #007BFF;padding-bottom:10px}
-        .lead{line-height:1.8;margin-bottom:20px;font-size:1.1em}
-        .skills-list{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:10px;margin-top:20px}
-        .skill{background:#E3F2FD;padding:10px 15px;border-left:4px solid #007BFF;border-radius:10px;color:#007BFF;font-weight:600}
-        .projects,.repo-grid,.certificate-grid,.grid-3{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px}
-        .project,.repo-card,.certificate-item{background:linear-gradient(135deg,#E3F2FD 0%,#BBDEFB 100%);padding:20px;border-radius:15px;border-left:4px solid #007BFF;transition:transform .3s ease,box-shadow .3s ease}
-        .project:hover,.repo-card:hover,.certificate-item:hover{transform:translateY(-5px);box-shadow:0 10px 20px rgba(0,123,255,0.3)}
-        .project h3,.repo-card h4,.certificate-item h3{color:#007BFF;margin-bottom:10px}
-        .github-link,.drive-link{display:inline-block;margin-top:15px;padding:12px 25px;border-radius:25px;text-decoration:none;color:#fff;background:linear-gradient(135deg,#007BFF 0%,#00B4D8 100%);transition:all .3s ease}
-        .github-link:hover,.drive-link:hover{transform:scale(1.05);box-shadow:0 5px 15px rgba(0,123,255,0.3)}
-        footer{text-align:center;color:#fff;padding:20px;text-shadow:2px 2px 4px rgba(0,0,0,0.3)}
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -167,18 +142,6 @@
         </footer>
     </div>
 
-    <script>
-        const links=document.querySelectorAll('nav a');
-        const sections=document.querySelectorAll('section.card');
-        links.forEach(link=>{
-            link.addEventListener('click',e=>{
-                e.preventDefault();
-                const target=document.querySelector(link.getAttribute('href'));
-                sections.forEach(s=>s.classList.remove('active'));
-                target.classList.add('active');
-                window.scrollTo({top:0,behavior:'smooth'});
-            });
-        });
-    </script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
