--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Krishved Singh Dugtal — Portfolio</title>
-    <link rel="stylesheet" href="/portfolioV1/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -142,6 +142,6 @@
         </footer>
     </div>
 
-    <script src="/portfolioV1/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
