Add code and certificate links with styled buttons
Added GitHub repository links with icons to each project and certificate view links to each certificate item in index.html. Introduced new CSS classes for .repo-button and .cert-button to style these links, including hover effects and icon transitions for improved user experience.

--- a/index.html
+++ b/index.html
@@ -52,14 +52,17 @@
                 <article class="project">
                     <h3>Lingofy - Language Translator</h3>
                     <p>An offline Language Translator Model that works without internet connectivity, providing translation services anytime, anywhere. It demonstrates machine learning concepts applied to language translation in an offline setup.</p>
+                    <a href="https://github.com/krishdugtal/Language-Translator" target="_blank" class="repo-button"><svg class="github-symbol" viewBox="0 0 16 16" width="16" height="16"><path fill="currentColor" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>Code</a>
                 </article>
                 <article class="project">
                     <h3>Scientific Calculator</h3>
                     <p>A Java-based GUI calculator using Swing that performs both basic arithmetic and advanced scientific operations such as trigonometric, logarithmic, and exponential functions.</p>
+                    <a href="https://github.com/krishdugtal/scientific-calculator" target="_blank" class="repo-button"><svg class="github-symbol" viewBox="0 0 16 16" width="16" height="16"><path fill="currentColor" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>Code</a>
                 </article>
                 <article class="project">
                     <h3>Student Registration Form</h3>
                     <p>A Java Swing-based desktop application that allows users to input and manage student details with an interactive GUI. It includes form validation, data storage, and user-friendly features.</p>
+                    <a href="https://github.com/krishdugtal/Student-Registration-Form" target="_blank" class="repo-button"><svg class="github-symbol" viewBox="0 0 16 16" width="16" height="16"><path fill="currentColor" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>Code</a>
                 </article>
             </div>
         </section>
@@ -94,15 +97,33 @@
             <div class="certificate-grid">
                 <div class="certificate-item">
                     <h3>🎓 Oracle Java Certification</h3>
-                    <p>Completed Oracle’s official Java certification course, mastering OOP concepts, file handling, and multithreading.</p>
+                    <p>Completed Oracle's official Java certification course, mastering OOP concepts, file handling, and multithreading.</p>
+                    <a href="https://drive.google.com/file/d/1W_Hra63TWaeeDKU4skBeRj-UsLtTldDz/view?usp=drive_link" target="_blank" class="cert-button">
+                        <svg class="cert-icon" viewBox="0 0 24 24" width="16" height="16">
+                            <path fill="currentColor" d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M16,11V18.1L13.9,16L11.1,18.8L8.3,16L11.1,13.2L8.9,11H16Z"/>
+                        </svg>
+                        View Certificate
+                    </a>
                 </div>
                 <div class="certificate-item">
                     <h3>💻 NPTEL Certification</h3>
                     <p>Earned certification in Advanced Programming in Java under IIT faculty, focusing on data structures, algorithms, and design patterns.</p>
+                    <a href="https://drive.google.com/file/d/1Z13YIVu3vbZ1JGkXfBX3sPf61vgKPvNa/view?usp=drive_link" target="_blank" class="cert-button">
+                        <svg class="cert-icon" viewBox="0 0 24 24" width="16" height="16">
+                            <path fill="currentColor" d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M16,11V18.1L13.9,16L11.1,18.8L8.3,16L11.1,13.2L8.9,11H16Z"/>
+                        </svg>
+                        View Certificate
+                    </a>
                 </div>
                 <div class="certificate-item">
                     <h3>🏆 Workshop Participation</h3>
                     <p>Actively participated in SRM workshops and seminars on AI, Cloud Computing, and Full Stack Development.</p>
+                    <a href="https://drive.google.com/file/d/1ZFzuY6cpoQ0sVjaQDX4Ryy9DiUW_Tj3L/view?usp=drive_link" target="_blank" class="cert-button">
+                        <svg class="cert-icon" viewBox="0 0 24 24" width="16" height="16">
+                            <path fill="currentColor" d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M16,11V18.1L13.9,16L11.1,18.8L8.3,16L11.1,13.2L8.9,11H16Z"/>
+                        </svg>
+                        View Certificate
+                    </a>
                 </div>
             </div>
             <a href="https://drive.google.com/drive/folders/13nO_4xmS2k_ANn-6DKcW4BD8XPWYOlxV?usp=sharing" target="_blank" class="drive-link">📂 View All Certificates</a>
